tests/ui/view-types/regression-156016.stderr
error: ty fragment matched a view type
  --> $DIR/regression-156016.rs:7:9
   |
LL |         compile_error!("ty fragment matched a view type");
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL | m!(&().{});
   | ---------- in this macro invocation
   |
   = note: this error originates in the macro `m` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

